// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/mobile/navbar it renders 1`] = `
<div
  className="css-7bgvw1-root"
>
  <a
    className="css-1y4f7e6-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="css-n5a2y0-logo"
      id="RED"
    />
  </a>
  <div
    className="css-1mn69pa-actions"
  >
    <div
      aria-label="sifchain-1"
      className="css-i8x0rd-network"
      onClick={[MockFunction]}
      role="button"
      tabIndex={0}
    >
      <p
        className="text"
      >
        sifchain-1
      </p>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
        color="#999999"
        data-testid="ExpandMoreIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
        />
      </svg>
    </div>
    <div
      aria-label="open navigation menu"
      className="css-1d26ok5-hamburger"
      onClick={[MockFunction]}
      role="button"
      tabIndex={0}
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/mobile/navbar toggleNavMenus is called onClick 1`] = `
<div
  className="css-7bgvw1-root"
>
  <a
    className="css-1y4f7e6-a"
    href="/"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="css-n5a2y0-logo"
      id="RED"
    />
  </a>
  <div
    className="css-1mn69pa-actions"
  >
    <div
      aria-label="sifchain-1"
      className="css-i8x0rd-network"
      onClick={[MockFunction]}
      role="button"
      tabIndex={0}
    >
      <p
        className="text"
      >
        sifchain-1
      </p>
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
        color="#999999"
        data-testid="ExpandMoreIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
        />
      </svg>
    </div>
    <div
      aria-label="open navigation menu"
      className="css-1d26ok5-hamburger"
      onClick={
        [MockFunction] {
          "calls": [
            [],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      role="button"
      tabIndex={0}
    >
      <div
        className="hamburger-content"
      />
    </div>
  </div>
</div>
`;
